2019108268 옥해은- add page address

--- a/github-2021/2019108268-옥해은.md
+++ b/github-2021/2019108268-옥해은.md
@@ -6,7 +6,8 @@
 - 학번 : 2019108268
 - 학과 : 컴퓨터공학전공
 - 관심분야 : 블록체인
-- https://github.com/dhrgodms
+- 깃허브 계정 : https://github.com/dhrgodms
+- 깃허브 페이지 : https://dhrgodms.github.io/hitchens/
 
 > #### 다양한 분야에 관심이 많아서, 하나하나 직접 경험해보며 흥미와 적성이 타협하는 지점을 찾아가고 있습니다.
 
